--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
     
     <link rel="stylesheet" href="css/main.css">
 
+    <!--Keywords-->
+
+    <meta name="Keywords" content="twitch, youtube, games, saurioh, Cristian Holsbach">
+
     <!-- Titulo -->
 
-    <title>Saurioh Page</title>
+    <title>Saurioh Home Page</title>
 
 </head>
 
