--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../css/main.css">
     
     <!-- Titulo -->
-    <title>Contactaos!</title>
+    <title>Saurioh Contacto</title>
 </head>
 <nav>
     <section class="navegador">
