--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../css/main.css">
     
     <!-- Titulo -->
-    <title>Descargamos algo?</title>
+    <title>Saurioh Descargas</title>
 </head>
 <nav>
     <section class="navegador">
