--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <!--Keywords-->
 
     <meta name="Keywords" content="twitch, youtube, games, saurioh, Cristian Holsbach">
-
+    <meta name="Description" content="Soy Saurioh un gamer de corazon que desea compartirlo al mundo">
     <!-- Titulo -->
 
-    <title>Saurioh Home Page</title>
+    <title>Saurioh -- Home Page</title>
 
 </head>
 
@@ -54,7 +54,7 @@
             <div class="card" style="width: 30rem;">
                 <img src="pages/img/sc.jpg" class="card-img-top" alt="sc2">
                 <div class="card-body">
-                    <p class="card-text">...Desde los RTS más famosos.</p>
+                    <p class="card-text">...Desde los RTS más famosos...</p>
                 </div>
             </div>
             <div class="card" style="width: 30rem;">
@@ -73,28 +73,29 @@
     
         <h2 class="subtitulo"> * Conoce y Juega *</h2>
 
-<section class="intro ">
+
     <div class="container">
         <div class="row">
             <div class="col">
-                <p class="text"> - CREE  </p>
+                <p class="titulo">CREE</p>
             </div>
             <div class="col">
-                <iframe width="500" height="320" src="https://www.youtube.com/embed/0DyXP1UEL4c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+                <iframe width="800" height="600" src="https://www.youtube.com/embed/0DyXP1UEL4c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
                 clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
             <div class="col">
-                <p class="text">  SUEÑA  </p>
+                <p class="titulo">SUEÑA</p>
             </div>    
     </div>
     </div>
-</section>
+
 
 <section class="introtxt">
     <div class="card" style="max-width: 100rem;">
         <div class="card-header">Que encontrar en esta página?</div>
         <div class="card-body text-success">
-            <p class="card-text">Todo el contenido relacionado a juegos de todo tipo, los gameplays más intensos, las mejores partidas,
+            <p class="card-text">Todo el contenido relacionado a juegos de todo tipo, consolas, pc, retrogaming, emulación,
+                                los gameplays más intensos, las mejores partidas, el contenido mas variopinto de internet;
                                 las mejores recomendaciones y los últimos títulos los pódes tener acá!
             </p>
         </div>
