--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,9 +9,13 @@
     rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     
     <link rel="stylesheet" href="../css/main.css">
-    
+
+    <!--Keywords-->
+
+    <meta name="Keywords" content="twitch, youtube, games, saurioh, Cristian Holsbach, contacto, twitter, instagram">
+    <meta name="description" content="Y si deja tu comentario a  Saurioh">
     <!-- Titulo -->
-    <title>Saurioh Contacto</title>
+    <title>Saurioh  -- Contacto</title>
 </head>
 <nav>
     <section class="navegador">
@@ -55,8 +59,7 @@
             <div class="boton">
                 <input type="submit" value="Enviar"class="botonenv">
             </div>
-
-    </section>
+</section>
     <section class="piepag" >
         <div class="container">
             <div class="container text-center">
