--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -64,11 +64,19 @@
         <div class="container">
             <div class="container text-center">
                 <div class="row row-cols-4">
-                    <div class="col"><a class="cont"href="https://www.youtube.com/channel/UCnuY6otHo_wBPlMkuJ_ZMwg" target="_blank"><img class="you"src="../pages/img/yout.png" alt="youtube"></a></div>
-                    <div class="col"> <a class="cont"href="https://www.instagram.com/saurioh/" target="_blank"><img class="you"src="../pages/img/instagram.png" alt="youtube"></a></div>
-                    <div class="col"><a class="cont"href="https://www.twitch.tv/saurioh" target="_blank"><img class="you"src="../pages/img/twitch.png" alt="youtube"></a> </div>
-                    <div class="col"><a class="cont"href="https://twitter.com/Saurioh_" target="_blank"><img class="you"src="../pages/img/twitter.png" alt="youtube"></a></div>
-                </div>
+                    <div class="red-youtube">
+                        <div class="col"><a class="cont"href="https://www.youtube.com/channel/UCnuY6otHo_wBPlMkuJ_ZMwg" target="_blank"><img class="you"src="../pages/img/yout.png" alt="youtube"></a></div>
+                    </div>
+                    <div class="red-instagram">
+                        <div class="col"><a class="cont"href="https://www.instagram.com/saurioh/" target="_blank"><img class="you"src="../pages/img/instagram.png" alt="youtube"></a></div>
+                    </div>
+                    <div class="red-twitch">
+                        <div class="col"><a class="cont"href="https://www.twitch.tv/saurioh" target="_blank"><img class="you"src="../pages/img/twitch.png" alt="youtube"></a> </div>
+                    </div>
+                    <div class="red-twitter">
+                        <div class="col"><a class="cont"href="https://twitter.com/Saurioh_" target="_blank"><img class="you"src="../pages/img/twitter.png" alt="youtube"></a></div>
+                    </div>
+                    </div>
             </div>
         </div>
     </section>
