--- a/index.html
+++ b/index.html
@@ -14,10 +14,19 @@
     <!--Keywords-->
 
     <meta name="Keywords" content="twitch, youtube, games, saurioh, Cristian Holsbach">
-    <meta name="Description" content="Soy Saurioh un gamer de corazon que desea compartirlo al mundo">
+    <meta name="description" content="Soy Saurioh un gamer de corazon que desea compartirlo al mundo">
     <!-- Titulo -->
 
     <title>Saurioh -- Home Page</title>
+
+    <!--Favicon-->
+
+    <link rel="apple-touch-icon" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png"  href="favicon/android-chrome-512x512.png">
+    <link rel="icon" type="image/png"  href="favicon/android-chrome-192x192.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 
 </head>
 
@@ -28,7 +37,7 @@
             </div>
             <ul class="nav justify-content-center">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="pages/info.html">Info</a>
+                    <a class="nav-link" aria-current="page" href="pages/info.html">Info</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="pages/datos.html">Datos</a>
