--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -13,18 +13,29 @@
     <!--Keywords-->
 
     <meta name="Keywords" content="twitch, youtube, games, saurioh, Cristian Holsbach, contacto, twitter, instagram">
-    <meta name="description" content="Y si deja tu comentario a  Saurioh">
+    <meta name="description" content="Deja tu comentario a  Saurioh">
+
     <!-- Titulo -->
     <title>Saurioh  -- Contacto</title>
+
+    <!--Favicon-->
+
+    <link rel="apple-touch-icon" href="../favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png"  href="../favicon/android-chrome-512x512.png">
+    <link rel="icon" type="image/png"  href="../favicon/android-chrome-192x192.png">
+    <link rel="manifest" href="../favicon/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
 </head>
 <nav>
     <section class="navegador">
             <div class="logo">
-                <a class="cont"href="../index.html"><img class="logo"src="../pages/img/logo.png" alt="lolgo"></a></div>
+                <a class="cont"href="../index.html"><img class="logo"src="../pages/img/logo.png" alt="logo"></a></div>
             </div>
             <ul class="nav justify-content-center">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../pages/info.html">Info</a>
+                    <a class="nav-link" aria-current="page" href="../pages/info.html">Info</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../pages/datos.html">Datos</a>
@@ -37,9 +48,6 @@
                 </li>
             </ul>
     </section>
-    <div class="atras">
-        
-    </div>
 </nav>
 </head>
 <body>
