--- a/pages/datos.html
+++ b/pages/datos.html
@@ -18,6 +18,15 @@ rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5
 <!-- Titulo -->
     <title>Saurio -- Datos</title>
 
+<!--Favicon-->
+
+<link rel="apple-touch-icon" href="../favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png"  href="../favicon/android-chrome-512x512.png">
+<link rel="icon" type="image/png"  href="../favicon/android-chrome-192x192.png">
+<link rel="manifest" href="../favicon/site.webmanifest">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
+
     <nav>
         <section class="navegador">
                 <div class="logo">
@@ -25,7 +34,7 @@ rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5
                 </div>
                 <ul class="nav justify-content-center">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../pages/info.html">Info</a>
+                        <a class="nav-link" aria-current="page" href="../pages/info.html">Info</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../pages/datos.html">Datos</a>
@@ -38,9 +47,6 @@ rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5
                     </li>
                 </ul>
         </section>
-        <div class="atras">
-            
-        </div>
     </nav>
 
 </head>
