--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -11,11 +11,20 @@
     <link rel="stylesheet" href="../css/main.css">
 
     <!--Keywords-->
-
     <meta name="Keywords" content="twitch, youtube, games, saurioh, Cristian Holsbach, imagenes, descargas">
     <meta name="description" content="Algunas imagenes de los juegos que juega Saurioh">
     <!-- Titulo -->
     <title>Saurioh -- Descargas</title>
+
+<!--Favicon-->
+
+<link rel="apple-touch-icon" href="../favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png"  href="../favicon/android-chrome-512x512.png">
+<link rel="icon" type="image/png"  href="../favicon/android-chrome-192x192.png">
+<link rel="manifest" href="../favicon/site.webmanifest">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
+
 </head>
 <nav>
     <section class="navegador">
@@ -24,7 +33,7 @@
             </div>
             <ul class="nav justify-content-center">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../pages/info.html">Info</a>
+                    <a class="nav-link" aria-current="page" href="../pages/info.html">Info</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../pages/datos.html">Datos</a>
