--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="icon" type="image/png"  href="favicon/android-chrome-192x192.png">
     <link rel="manifest" href="favicon/site.webmanifest">
     <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="Soy Saurioh un gamer de corazon que desea compartirlo al mundo">
 
 </head>
 
@@ -37,16 +37,16 @@
             </div>
             <ul class="nav justify-content-center">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="pages/info.html">Info</a>
+                    <a class="nav-link" aria-current="page" href="pages/info.html">INFO</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pages/datos.html">Datos</a>
+                    <a class="nav-link" href="pages/datos.html">DATOS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pages/galeria.html">Galeria</a>
+                    <a class="nav-link" href="pages/galeria.html">GALERIA</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="pages/contacto.html">Contacto</a>
+                    <a class="nav-link " href="pages/contacto.html">CONTACTO</a>
                 </li>
             </ul>
     </section>
@@ -59,6 +59,13 @@
     <h1 class="titulo">Ready player one</h1>
     <h2 class="subtitulo2"> by Saurioh</h2>
 
+    <div>
+        <p class="card-text">No hace falta que juegues en 4k, con el ultimo setup de PC que salió, o en consolas de ultima generación...
+            solo juega y diviertete, explora mundos inimaginables, conquista, corre carreras, enfrentate tu solo a un ejercito
+            ....no hay limites para la imaginación... solo nunca dejes de soñar y sorprenderte siempre como un niño.- 
+                                                                                                        Cristian.-
+        </p>
+    </div>
         <section class="tarjetas">
             <div class="card" style="width: 30rem;">
                 <img src="pages/img/sc.jpg" class="card-img-top" alt="sc2">
@@ -79,8 +86,11 @@
                 </div>
             </div>
         </section>
-    
+
+    <div class="area">
         <h2 class="subtitulo"> * Conoce y Juega *</h2>
+    </div>
+        
 
 
     <div class="container">
