--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -35,16 +35,16 @@
             </div>
             <ul class="nav justify-content-center">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="../pages/info.html">Info</a>
+                    <a class="nav-link" aria-current="page" href="../pages/info.html">INFO</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../pages/datos.html">Datos</a>
+                    <a class="nav-link" href="../pages/datos.html">DATOS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../pages/galeria.html">Galeria</a>
+                    <a class="nav-link" href="../pages/galeria.html">GALERIA</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="../pages/contacto.html">Contacto</a>
+                    <a class="nav-link " href="../pages/contacto.html">CONTACTO</a>
                 </li>
             </ul>
     </section>
@@ -53,6 +53,10 @@
 <body>
 
     <h1 class="titulo">Cuenta tu experiencia</h1>
+
+    <div class="area">
+        <p>Comenta lo que te gusto y porque no también lo que no te gusto...</p>
+    </div>
 
     <section class="formulario">
         <div class="mb-1">
@@ -67,6 +71,7 @@
             <div class="boton">
                 <input type="submit" value="Enviar"class="botonenv">
             </div>
+            
 </section>
     <section class="piepag" >
         <div class="container">
