--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -33,16 +33,16 @@
             </div>
             <ul class="nav justify-content-center">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="../pages/info.html">Info</a>
+                    <a class="nav-link" aria-current="page" href="../pages/info.html">INFO</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../pages/datos.html">Datos</a>
+                    <a class="nav-link" href="../pages/datos.html">DATOS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../pages/galeria.html">Galeria</a>
+                    <a class="nav-link" href="../pages/galeria.html">GALERIA</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="../pages/contacto.html">Contacto</a>
+                    <a class="nav-link " href="../pages/contacto.html">CONTACTO</a>
                 </li>
             </ul>
     </section>
@@ -50,6 +50,10 @@
 <body>
     <main>
         <h1 class="titulo" >Y Ahora unos fondos</h1>
+
+        <div>
+            <p class="subtitulo2">Leon...Jill...Raynor...entre otros, pase y sirvase!...</p>
+
         <section class="down1">
             <div class="container-fuid">
                 <div class="row">
@@ -82,14 +86,16 @@
         </div>
     </div>
 </section>
-        
+        <div class="area">
             <h2 class="subtitulo2">FREE DOWNLOAD</h2> 
+        </div>
+            
 
     <div class="txtdw">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col">
-                            <p class="card-text" >
+                            <p class="subtitulo3" >
                             De los mejores games de todos los tiempos, algunas imagenes que pueden decorar de mejor manera tu 
                             escritorio con un genial fondo de pantalla.
                             </p>
