--- a/pages/datos.html
+++ b/pages/datos.html
@@ -34,16 +34,16 @@ rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5
                 </div>
                 <ul class="nav justify-content-center">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="../pages/info.html">Info</a>
+                        <a class="nav-link" aria-current="page" href="../pages/info.html">INFO</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../pages/datos.html">Datos</a>
+                        <a class="nav-link" href="../pages/datos.html">DATOS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../pages/galeria.html">Galeria</a>
+                        <a class="nav-link" href="../pages/galeria.html">GALERIA</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="../pages/contacto.html">Contacto</a>
+                        <a class="nav-link " href="../pages/contacto.html">CONTACTO</a>
                     </li>
                 </ul>
         </section>
