--- a/pages/info.html
+++ b/pages/info.html
@@ -36,13 +36,13 @@
             </div>
             <ul class="nav justify-content-center">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="../pages/info.html">Info</a>
+                    <a class="nav-link" aria-current="page" href="../pages/info.html">INFO</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../pages/datos.html">Datos</a>
+                    <a class="nav-link" href="../pages/datos.html">DATOS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../pages/galeria.html">Galeria</a>
+                    <a class="nav-link" href="../pages/galeria.html">GALERIA</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link " href="../pages/contacto.html">Contacto</a>
@@ -56,6 +56,7 @@
     <main>
         <h1 class="titulo" > Quien es?</h1>
         <h2 class="subtitulo2" >Saurioh</h2>
+
 <div class="container">
     <div class="row">
         <div class="col-6">
@@ -102,7 +103,7 @@
 </div>
 
 
-<div>
+<div class="area">
     <h2 class="subtitulo"> * Otros datos importantes *</h2>
 </div>
 
