--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 
 <nav>
-    <section class="navegador">
+    <section class="navegador"  >
             <div class="logo">
                 <img class="logo" src="pages/img/logo.png" alt="logo">
             </div>
@@ -55,11 +55,12 @@
 
 <body>
 <main>
-
+    
     <h1 class="titulo">Ready player one</h1>
     <h2 class="subtitulo2"> by Saurioh</h2>
 
-    <div>
+
+    <div class="container-fluid">
         <p class="card-text">No hace falta que juegues en 4k, con el ultimo setup de PC que salió, o en consolas de ultima generación...
             solo juega y diviertete, explora mundos inimaginables, conquista, corre carreras, enfrentate tu solo a un ejercito
             ....no hay limites para la imaginación... solo nunca dejes de soñar y sorprenderte siempre como un niño.- 
@@ -99,7 +100,7 @@
                 <p class="titulo">CREE</p>
             </div>
             <div class="col">
-                <iframe width="800" height="600" src="https://www.youtube.com/embed/0DyXP1UEL4c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+                <iframe width="400" height="200" src="https://www.youtube.com/embed/0DyXP1UEL4c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
                 clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
             <div class="col">
