--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -29,7 +29,7 @@
 <nav>
     <section class="navegador">
             <div class="logo">
-                <a class="cont"href="../index.html"><img class="logo"src="../pages/img/logo.png" alt="lolgo"></a></div>
+                <a class="cont"href="../index.html"><img class="logo "src="../pages/img/logo.png" alt="logo"></a></div>
             </div>
             <ul class="nav justify-content-center">
                 <li class="nav-item">
@@ -50,9 +50,7 @@
 <body>
     <main>
         <h1 class="titulo" >Y Ahora unos fondos</h1>
-
-        <div>
-            <p class="subtitulo2">Leon...Jill...Raynor...entre otros, pase y sirvase!...</p>
+        <!-- <h2 class="subtitulo2">Leon...Jill...Raynor...entre otros, pase y sirvase!...</h2> -->
 
         <section class="down1">
             <div class="container-fuid">
