--- a/pages/info.html
+++ b/pages/info.html
@@ -45,7 +45,7 @@
                     <a class="nav-link" href="../pages/galeria.html">GALERIA</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="../pages/contacto.html">Contacto</a>
+                    <a class="nav-link " href="../pages/contacto.html">CONTACTO</a>
                 </li>
             </ul>
     </section>
